# figus2026

./: .copier-answers.yml  .env.example  .fastapicloudignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  render.yaml
docs/: about_the_docs.md  conf.py  configuration.md  development_workflow.md  getting_started.md  index.md
frontend/: index.html  package-lock.json
frontend/src/: main.ts  style.css
src/figus2026/: __init__.py  __main__.py  admin.py  app.py  database.py  models.py  seed_data.py  services.py  trivia_data.py
tests/: test_admin.py  test_app.py  test_cli.py
