[project]
name = "figus2026"
description = "Nuestro album de figus para el mundial"
authors = [{name = "Martín Gaitán y Ema Gaitán Lobo", email = "gaitan@gmail.com"}]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
keywords = []
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.136.1",
    "rich",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "figus2026"

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { ty = "0 days" }

[tool.ty.src]
exclude = [".worktrees/", ".external-worktrees/"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle (E, W) https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # isort
    "C90",    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "A",      # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF",    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "T10",    # remove pdbs
    "ISC",    # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "ASYNC",  # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "ERA",    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "TRY",    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "BLE",    # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "EXE",    # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "C4",     # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "N",      # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PIE",    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PERF",   # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PL",     # https://docs.astral.sh/ruff/rules/#pylint-pl
    "FURB",   # https://docs.astral.sh/ruff/rules/#refurb-furb
    "RET",    # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "TID252", # https://docs.astral.sh/ruff/rules/relative-imports/
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"docs/conf.py" = ["A"]

[tool.pytest.ini_options]
addopts = [
    "--cov=figus2026",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "--strict-markers",          # Fail if markers are not registered in pytest configuration
    "--strict-config",           # Fail if there are errors in pytest configuration
    "-ra",                       # Show extra test summary info for all except passed tests
]

[project.urls]
Homepage = "https://mgaitan.github.io/figus2026"
Documentation = "https://mgaitan.github.io/figus2026"
Changelog = "https://github.com/mgaitan/figus2026/releases"
Repository = "https://github.com/mgaitan/figus2026"
Issues = "https://github.com/mgaitan/figus2026/issues"
Funding = "https://github.com/sponsors/mgaitan"

[project.scripts]
figus2026 = "figus2026:main"

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pytest-freezer>=0.4.9",
    "pytest-mock>=3.15.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]
lint = ["ruff"]
qa = [
    { include-group = "lint" },
    "ty>=0.0.27",
]
docs = [
    "myst-parser>=3.0.0",
    "sphinx>=8.2",
    "sphinx-book-theme>=1.1.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "richterm[sphinx]>=0.1.0",
]
dev = [
    { include-group = "test" },
    { include-group = "qa" },
    "ipdb",
    "ipython",
]
